# sparse-attention

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  merge_rule_serializer.py  run.sh
include/: spmm.h
run/: launcher.cpp  launcher.h  main.cpp  utils.cpp  utils.h
src/: Matrix.cu  Memory.cu  Test.cpp  Test.h  Utils.cpp  Utils.h  allocator.c  allocator.cpp  allocator.h  common.h  context.c  context.h  handle.cpp  handle.h  header.h  helpers.c  helpers.h  main.cpp  main.cu  matrix.c  matrix.cpp  matrix.h  matrix_ops.cpp  matrix_ops.cu  matrix_ops.cuh  matrix_ops.h  mmio.c  mmio.h  model.h  run.cpp  run.cu  serialize.cpp  spmm.cu  spmm.cuh  test.cpp  tokenizer.c  tokenizer.h  utils.cpp  utils.h
src/cuda/: cu_helpers.cuh  cuda_helpers.cuh  helpers.cuh  spmm_csc.cu  spmm_csr.cu  wrapper.cu
src/cuda/api/: allocator.cu  allocator.cuh  cu_allocator.cu  cu_allocator.cuh  cu_mem_wrapper.cu  cu_mem_wrapper.cuh  cuda_allocator.cu  cuda_allocator.cuh  cuda_mem_wrapper.cu  cuda_mem_wrapper.cuh  memory.cu  memory.cuh
src/cuda/include/: helpers.cuh
src/cuda/kernels/: gemm.cu  helpers.cu  softmax.cu  spmm.cu  spmm.cuh  spmm_csc.cu  spmm_csr.cu  spmm_csr.cuh
src/include/: allocator.h  helpers.h  launcher.h  matrix.h
test/: test.cpp  unit_tests.cpp  unit_tests.h
tools/: matrix_generator.py
